cmake_minimum_required(VERSION 2.6)
add_definitions("-Wall -g -fdiagnostics-color=auto -std=c++11")
include_directories(./inc ./src)
link_directories(${CMAKE_SOURCE_DIR}/lib)
aux_source_directory(. TEST_KAFKA)
add_subdirectory(./src)
#add_executable(kafka ${TEST_KAFKA})
add_executable(producer produ.cpp)
add_executable(comsumer comsu.cpp)
target_link_libraries(producer src rdkafka rdkafka++)
target_link_libraries(comsumer src rdkafka rdkafka++)